--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <header class="sticky top-0 z-10">
   <mat-toolbar color="primary" role="navigation">
     <nav class="container flex items-center justify-between gap-2">
-      <a mat-button [routerLink]="['/' | localize]">CRUD Demo</a>
+      <a mat-button [routerLink]="['/' | localize]">RxJS Demo</a>
       <button mat-button (click)="toggleLanguage()" class="uppercase">{{ lang }}</button>
     </nav>
   </mat-toolbar>
