--- a/src/app/post/post-list/post-list.component.html
+++ b/src/app/post/post-list/post-list.component.html
@@ -72,7 +72,7 @@
   <ng-container matColumnDef="actions">
     <th mat-header-cell *matHeaderCellDef>&nbsp;</th>
     <td mat-cell *matCellDef="let row">
-      <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+      <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="'uni.aria-label.show-actions'">
         <mat-icon>more_vert</mat-icon>
       </button>
       <mat-menu #menu="matMenu">
@@ -93,9 +93,13 @@
   </ng-container>
 
   <ng-container matColumnDef="expand">
-    <th mat-header-cell *matHeaderCellDef aria-label="row actions">&nbsp;</th>
+    <th mat-header-cell *matHeaderCellDef [attr.aria-label]="'uni.aria-label.row-actions' | translate">&nbsp;</th>
     <td mat-cell *matCellDef="let element">
-      <button mat-icon-button aria-label="expand row" (click)="onExpand($event, element)">
+      <button
+        mat-icon-button
+        [attr.aria-label]="'uni.aria-label.expand-row' | translate"
+        (click)="onExpand($event, element)"
+      >
         @if (expandedElement === element) {
           <mat-icon>keyboard_arrow_up</mat-icon>
         } @else {
@@ -153,7 +157,7 @@
   [pageIndex]="pageIndex() - 1"
   [length]="totalCount()"
   (page)="onPageChange($event)"
-  aria-label="Select page of posts"
+  [attr.aria-label]="'uni.aria-label.select-page-of-posts' | translate"
 ></mat-paginator>
 
 <div *cdkPortal class="container py-4">
