--- a/src/app/post/post-list/post-list.component.html
+++ b/src/app/post/post-list/post-list.component.html
@@ -72,7 +72,7 @@
   <ng-container matColumnDef="actions">
     <th mat-header-cell *matHeaderCellDef>&nbsp;</th>
     <td mat-cell *matCellDef="let row">
-      <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="'uni.aria-label.show-actions'">
+      <button mat-icon-button [matMenuTriggerFor]="menu" [attr.aria-label]="'uni.aria-label.show-actions' | translate">
         <mat-icon>more_vert</mat-icon>
       </button>
       <mat-menu #menu="matMenu">
